# POSAndroid

./: dashboard.py  database.py  expense.py  main.py  menu.py  order.py  product.py  pyproject.toml  restaurant.db  sale.py  setting.py
.github/workflows/: main.yml
