[project]
name = "AKBER TIKKA"
version = "1.0.0"
description = "AKBER TIKKA"
authors = [
  {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
  "flet==0.28.3",
  "DateTime",
  "python-escpos==2.0.0"
]

[tool.flet]
org = "com.example"
product = "AKBER TIKKA"
company = "AKBER TIKKA"
copyright = "Copyright (C) 2025 Your Company"
build_number = 1
app.module = "main"
app.path = "."
app.exclude = ["assets"]

[tool.flet.android]
adaptive_icon_background = ""
split_per_abi = false

[tool.flet.android.permission]
"android.permission.READ_EXTERNAL_STORAGE" = true
"android.permission.READ_MEDIA_IMAGES" = true
"android.permission.WRITE_EXTERNAL_STORAGE" = true
"android.permission.USB_PERMISSION" = true
"android.permission.SERIAL_PORT" = true
"android.permission.BLUETOOTH" = true
"android.permission.BLUETOOTH_ADMIN" = true
"android.permission.BLUETOOTH_CONNECT" = true
"android.permission.BLUETOOTH_SCAN" = true
